# libwireshark-rs

./: .gitignore  Cargo.toml  README.md
foo_dissector/: .gitignore  Cargo.toml  build.rs
foo_dissector/src/: lib.rs
libwireshark/: Cargo.toml
libwireshark/src/: dissector.rs  header.rs  lib.rs  prefs.rs  utils.rs
libwireshark_proc/: Cargo.toml
libwireshark_scripts/: Cargo.toml  include.toml
libwireshark_scripts/src/: libwireshark.h  main.rs
libwireshark_sys/: Cargo.toml
libwireshark_sys/scripts/: dll2lib.bat
libwireshark_sys/src/: bindings.rs  lib.rs  libwireshark.h
