[package]
name = "foo_dissector"
version = "0.1.0"
authors = ["Jose A <jose-pr@coqui.dev>"]
edition = "2018"
[package.metadata]
copyright = "test"

[lib]
name = "foo_dissector"
crate-type = ["staticlib", "cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libwireshark = {path="../libwireshark"}
libwireshark_proc = {path="../libwireshark_proc"}
once_cell="*"

[build-dependencies]

