[package]
name = "libwireshark_proc"
version = "0.1.0"
authors = ["Jose A <jose-pr@coqui.dev>"]
edition = "2018"
[lib]
name = "libwireshark_proc"
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_meta = "*"
#proc-macro = "*"